--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon.png">
     <link async rel="stylesheet" href="%PUBLIC_URL%/css/ionicons.min.css">
     <link rel="stylesheet" href="https://unpkg.com/react-instantsearch-theme-algolia@4.0.0/style.min.css">
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBeAMxUnGYst9s-pg_VyJH7i7cRnwCmDm8&libraries=places"></script>
 
 
     <!--
