--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon.ico">
     <link async rel="stylesheet" href="%PUBLIC_URL%/css/ionicons.min.css">
     <link rel="stylesheet" href="https://unpkg.com/react-instantsearch-theme-algolia@4.0.0/style.min.css">
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBeAMxUnGYst9s-pg_VyJH7i7cRnwCmDm8&libraries=places"></script>
